2001-07-25  Ramiro Estrugo  <ramiro@fateware.com>

	* librsvg.spec.in:
	Add missing pkg-config file.
	
2001-07-25  Ramiro Estrugo  <ramiro@fateware.com>

	* Makefile.am:
	* librsvg.m4:
	Retire this thing which is no longer relevant in the GNOME2
	universe.
	
2001-07-25  Ramiro Estrugo  <ramiro@fateware.com>

	* .cvsignore:
	Im a dumbass.  Revert the last stupid change i made to ignore
	files that arent made no more.
	
2001-07-25  Ramiro Estrugo  <ramiro@fateware.com>

	* .cvsignore:
	Add generated files, even though im not 100% sure where they are
	coming from.

	* Makefile.am:
	Rename library to librsvg-2 so that it can cohabitate with librsvg
	from the GNOME1 platform.
	Change includedir to librsvg-2/librsvg for the same purpose.
	
	* librsvg-2.0.pc.in:
	Change includedir to librsvg-2/librsvg.
	Change link flags to '-lrsvg-2' instead of '-lrsvg'
	
	* librsvg.spec.in:
	Update for library and includedir name changes, plus some extra
	cleanup.
	
2001-07-25  Darin Adler  <darin@bentspoon.com>

	* configure.in: Use more warnings when compiling from CVS.
	* CVSVERSION: Flag to tell configure.in that these are
	CVS sources, not a tarball.

	* Makefile.am: Set log domain to "librsvg", disable
	deprecated stuff from glib, gdk, and gtk.

	* rsvg-css.c: (rsvg_css_parse_color): Use new
	g_string_ascii_down instead of deprecated g_string_down.
	* test-ft-gtk.c: (new_test_window): Use gtk_widget_set_usize
	instead of deprecated gtk_drawing_area_set_size.
	(main): Remove unnecessary call to deprecated gdk_rgb_init.

2001-07-24  Darin Adler  <darin@bentspoon.com>

	* .cvsignore: Don't ignore files that aren't made any more.
	* MAINTAINERS: Add myself.
	* README.CVS: Removed unnecessary file.

2001-07-13  Darin Adler  <darin@bentspoon.com>

	* configure.in: Remove xml-i18n-tools invocation so we don't
	end up with a po directory.

2001-07-09  Ramiro Estrugo  <ramiro@fateware.com>

	* .cvsignore:
	* Makefile.am:
	* README:
	* autogen.sh:
	* configure.in:
	* librsvg-1.0.pc.in: