@@ -48,29 +48,9 @@ AC_SUBST(GDK_PIXBUF_REQUIRED)
 AC_SUBST(FREETYPE_REQUIRED)
 AC_SUBST(POPT_REQUIRED)
 
-GNOME_PKGCONFIG_CHECK_MODULES(GLIB, glib-2.0:$GLIB_REQUIRED gmodule-2.0:$GLIB_REQUIRED gthread-2.0:$GLIB_REQUIRED gtk+-2.0:$GLIB_REQUIRED)
-GNOME_PKGCONFIG_CHECK_MODULES(GTK, gtk+-2.0:$GTK_REQUIRED)
-GNOME_PKGCONFIG_CHECK_MODULES(GDK_PIXBUF, gdk-pixbuf-2.0:$GDK_PIXBUF_REQUIRED)
-GNOME_PKGCONFIG_CHECK_MODULES(XML, libxml-2.0:$XML_REQUIRED)
-GNOME_PKGCONFIG_CHECK_MODULES(ART, libart-2.0:$ART_REQUIRED)
-
-dnl AC_DEFINE(GNOME_PLATFORM_VERSION, 1095000)
-
-AC_SUBST(GLIB_LIBS)
-AC_SUBST(GLIB_CFLAGS)
-AC_SUBST(GMODULE_LIBS)
-AC_SUBST(GMODULE_CFLAGS)
-AC_SUBST(GTHREAD_LIBS)
-AC_SUBST(GTHREAD_CFLAGS)
-AC_SUBST(GTK_LIBS)
-AC_SUBST(GTK_CFLAGS)
-AC_SUBST(GDK_PIXBUF_LIBS)
-AC_SUBST(GDK_PIXBUF_CFLAGS)
-AC_SUBST(XML_LIBS)
-AC_SUBST(XML_CFLAGS)
-AC_SUBST(ART_LIBS)
-AC_SUBST(ART_CFLAGS)
-
+PKG_CHECK_MODULES(MODULES, glib-2.0 >= $GLIB_REQUIRED gmodule-2.0 >= $GLIB_REQUIRED gthread-2.0 >= $GLIB_REQUIRED gtk+-2.0 >= $GTK_REQUIRED gdk-pixbuf-2.0 >= $GDK_PIXBUF_REQUIRED libxml-2.0 >= $XML_REQUIRED libart-2.0 >= $ART_REQUIRED)
+AC_SUBST(MODULES_LIBS)
+AC_SUBST(MODULES_CFLAGS)
 
 dnl ====================================
 dnl = Begin tests for popt
